tdf#105641: no javascript in svg export for selection of objects

Change-Id: I9150449770b7cef0c424277f87a21e00e123b9ea